@@ -10,6 +10,7 @@ import org.springframework.stereotype.Component;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -18,7 +19,6 @@ public class LoadData implements CommandLineRunner {
     private final BookMapper bookMapper;
 
     @Override
-
     public void run(String... args) throws Exception {
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
@@ -27,70 +27,70 @@ public class LoadData implements CommandLineRunner {
                 .title("Witcher")
                 .authors(new HashSet<>(Arrays.asList("Andrzej Sapkowski", "CD Projekt RED")))
                 .publisher("Slavic Mythology Institution")
-                .price(new BigDecimal(30.99))
+                .price(new BigDecimal("30.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.ROMANCE)
                 .title("The Notebook")
-                .authors(new HashSet<>(Arrays.asList("Nicholas Sparks")))
+                .authors(new HashSet<>(List.of("Nicholas Sparks")))
                 .publisher("Hachette Book Group")
-                .price(new BigDecimal(15.99))
+                .price(new BigDecimal("15.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.MYSTERY)
                 .title("The Da Vinci Code")
-                .authors(new HashSet<>(Arrays.asList("Dan Brown")))
+                .authors(new HashSet<>(List.of("Dan Brown")))
                 .publisher("Doubleday")
-                .price(new BigDecimal(20.99))
+                .price(new BigDecimal("20.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.HORROR)
                 .title("It")
-                .authors(new HashSet<>(Arrays.asList("Stephen King")))
+                .authors(new HashSet<>(List.of("Stephen King")))
                 .publisher("Viking Press")
-                .price(new BigDecimal(25.99))
+                .price(new BigDecimal("25.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.SCIENCE_FICTION)
                 .title("Dune")
-                .authors(new HashSet<>(Arrays.asList("Frank Herbert")))
+                .authors(new HashSet<>(List.of("Frank Herbert")))
                 .publisher("Chilton Books")
-                .price(new BigDecimal(22.99))
+                .price(new BigDecimal("22.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.BIOGRAPHY)
                 .title("Steve Jobs")
-                .authors(new HashSet<>(Arrays.asList("Walter Isaacson")))
+                .authors(new HashSet<>(List.of("Walter Isaacson")))
                 .publisher("Simon & Schuster")
-                .price(new BigDecimal(18.99))
+                .price(new BigDecimal("18.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.HISTORICAL_FICTION)
                 .title("The Pillars of the Earth")
-                .authors(new HashSet<>(Arrays.asList("Ken Follett")))
+                .authors(new HashSet<>(List.of("Ken Follett")))
                 .publisher("William Morrow and Company")
-                .price(new BigDecimal(26.99))
+                .price(new BigDecimal("26.99"))
                 .build()));
 
         bookRepository.save(bookMapper.bookDTOToBook(BookDTO.builder()
                 .version(1)
                 .bookGenre(BookDTO.BookGenre.THRILLER)
                 .title("The Girl on the Train")
-                .authors(new HashSet<>(Arrays.asList("Paula Hawkins")))
+                .authors(new HashSet<>(List.of("Paula Hawkins")))
                 .publisher("Riverhead Books")
-                .price(new BigDecimal(17.99))
+                .price(new BigDecimal("17.99"))
                 .build()));
 
         System.out.println("Books: " + bookRepository.count());
